# bezier-curves

./: .gitignore  CMakeLists.txt  main.cc
project/cmake/: FindLibSDL2.cmake  SublimeText.cmake  SublimeText.cmake.in
src/: bezier.cc  bezier.h  color.cc  color.h  common.h  context.cc  context.h  error.h  main.cc  painter.cc  painter.h  point.cc  point.h  polynomial.h  rect.cc  rect.h  size.h  window.cc  window.h
